--- a/src/main/resources/mysql.properties
+++ b/src/main/resources/mysql.properties
@@ -3,3 +3,6 @@ mysql.user = root
 mysql.pass = null
 mysql.driver = com.mysql.jdbc.Driver
 
+hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+hibernate.show_sql = true
+hibernate.hbm2ddl.auto = update
