--- a/src/main/resources/mysql.properties
+++ b/src/main/resources/mysql.properties
@@ -1,4 +1,4 @@
-mysql.server = jdbc:mysql://127.0.0.1:3306/example
+mysql.server = jdbc:mysql://127.0.0.1:3306/example?useUnicode=true&characterEncoding=utf8
 mysql.user = root
 mysql.pass = null
 mysql.driver = com.mysql.jdbc.Driver
